# pythonbird

./: .gitignore  CHANGELOG.md  GUIDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
pythonbird/: __init__.py  contacts.py  core.py  mail.py
tests/: test_compose.py  test_contacts.py  test_core.py  test_mail_encoding.py
